--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
               "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.bubble.css",
               "node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": [
