--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "^11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.5",
     "@angular/router": "^11.0.5",
+    "@types/quill": "^2.0.4",
     "ngx-cookie-service": "^11.0.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primeng": "^11.0.0",
+    "primeng": "^11.2.0",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
